crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_in_where_clause.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select * from t where current = 1 and action = 'click'

-- Output:
select *
from t
where current = 1
  and action = 'click';
