crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_join_keywords_as_columns.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select inner, left, right, full, outer, cross, natural, using, join from t

-- Output:
select
  "inner",
  "left",
  "right",
  "full",
  "outer",
  "cross",
  "natural",
  using,
  "join"
from t;
