crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_misc_keywords_as_columns.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select generated, always, stored, analyze, explain, reindex, returning, vacuum, pragma, database, attach, detach from t

-- Output:
select
  generated,
  always,
  stored,
  analyze,
  explain,
  reindex,
  "returning",
  vacuum,
  pragma,
  database,
  attach,
  detach
from t;
