crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_multiple_in_expression.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select current + offset + row from t

-- Output:
select current + "offset" + row from t;
