crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_sort_keywords_as_columns.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select asc, desc, nulls, first, last from t

-- Output:
select
  "asc",
  "desc",
  "nulls",
  "first",
  "last"
from t;
