crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_transaction_keywords_as_columns.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select begin, commit, rollback, savepoint, release, transaction, deferred, immediate, exclusive from t

-- Output:
select
  "begin",
  "commit",
  "rollback",
  "savepoint",
  "release",
  transaction,
  deferred,
  immediate,
  exclusive
from t;
