crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_trigger_keywords_as_columns.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select before, after, instead, each, for from t

-- Output:
select
  before,
  after,
  instead,
  each,
  for
from t;
