crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_window_keywords_as_columns.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select rows, range, groups, preceding, following, unbounded, exclude, ties, others from t

-- Output:
select
  rows,
  range,
  groups,
  preceding,
  following,
  unbounded,
  exclude,
  ties,
  others
from t;
