crates/solite-fmt/src/snapshots/solite_fmt__tests__line_comment_after.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a from t -- trailing comment

-- Output:
select a from t;
