crates/solite-fmt/src/snapshots/solite_fmt__tests__line_comment_before.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- -- This is a comment
-- select a from t

-- Output:
-- This is a comment
select a from t;
