crates/solite-fmt/src/snapshots/solite_fmt__tests__mixed_comments_before_statement.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- -- line comment
-- /* block comment */
-- select * from t

-- Output:
-- line comment
/* block comment */
select * from t;
