crates/solite-fmt/src/snapshots/solite_fmt__tests__multiple_comments.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- -- first comment
-- -- second comment
-- select a from t

-- Output:
-- first comment
-- second comment
select a from t;
